CIR-I2750 | plus icon overlap issue fixed

--- a/src/components/nav/LeftMenu.scss
+++ b/src/components/nav/LeftMenu.scss
@@ -18,6 +18,9 @@
 		align-items: flex-start;
 		background-color: $colorPrimary;
 		padding: 10px 0 0 6px;
+		a {
+			padding-right: 16px;
+		}
 	}
 
 	.h-100 {
